[gd_scene load_steps=4 format=3 uid="uid://ddst1sy55by4u"]

[ext_resource type="Texture2D" uid="uid://crpaha4jcev2l" path="res://assets/art/achievements/unachieved_duck.png" id="1_62dxe"]
[ext_resource type="Script" path="res://scenes/slots/achievement_slot/achievement_slot.gd" id="1_h5ire"]
[ext_resource type="FontFile" uid="uid://qtceburuli1a" path="res://assets/fonts/bangers_regular.ttf" id="2_87eeb"]

[node name="AchievementSlot" type="Control"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_h5ire")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AchievementNameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "First Steps"

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = " - Win your first battle"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="RewardLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RewardAmountLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_87eeb")

[node name="NextRewardLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AchievedIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("1_62dxe")
expand_mode = 2
stretch_mode = 4

[node name="AchievedIcon2" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_62dxe")
expand_mode = 2
stretch_mode = 4

[node name="AchievedIcon3" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_62dxe")
expand_mode = 2
stretch_mode = 4

[node name="AchievedIcon4" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_62dxe")
expand_mode = 2
stretch_mode = 4

[node name="CompleteAchievement" type="PanelContainer" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"AlphaPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CompleteAchievement"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GetRewardButton" type="Button" parent="PanelContainer/CompleteAchievement/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Get reward"

[node name="GetRewardLabel" type="Label" parent="PanelContainer/CompleteAchievement/MarginContainer/GetRewardButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "ddd"

[connection signal="pressed" from="PanelContainer/CompleteAchievement/MarginContainer/GetRewardButton" to="." method="_on_get_reward_button_pressed"]
